feat(engine): add fullscreen mode

--- a/config.yml
+++ b/config.yml
@@ -3,5 +3,8 @@ ent_millPlateColor: "255 255 0"
 ent_steelColor: "192 192 192"
 ent_trajectoryColor: "255 0 0"
 r_fps: 125
-r_resolutionHeight: 600
-r_resolutionWidth: 800
+r_fullscreenMode: false
+r_fullscreenResolutionHeight: 1080
+r_fullscreenResolutionWidth: 1920
+r_windowResolutionHeight: 600
+r_windowResolutionWidth: 800
